<resources>
    <string name="app_name">AntiTheft </string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="device_name">Device Name :</string>
    <string name="pass">Password : </string>
    <string name="device_id">Device Id : </string>
    <string name="register">Register Device</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="ip_address">IP Address :</string>
    <string name="at_frequency">Check frequency :</string>
    <string name="device_admin_description">Device Admin Receiver</string>

    <!-- Anti Theft-->
    <string name="header_category_antitheft">Anti Theft</string>
    <string name="antitheft_settings_title">Anti Theft Settings</string>

    <string name="at_key_status">status</string>
    <string name="at_key_status_title">System Status</string>

    <string name="at_key_ip">ip</string>
    <string name="at_key_ip_title">IP Address</string>

    <string name="at_key_frequency">frequency</string>
    <string name="at_key_frequency_title">Anti Theft Check Frequency (sec.)</string>

    <string name="at_key_device_id">device_id</string>
    <string name="at_key_device_id_title">Device ID</string>

    <string name="at_key_device_name">device_name</string>
    <string name="at_key_device_name_title">Device Name</string>

    <string name="at_key_device_pass">device_pass</string>
    <string name="at_key_device_pass_title">Device Password</string>

    <string name="at_key_reset">reset</string>
    <string name="at_key_reset_title">Reset</string>
    <string name="at_key_reset_summary">Reset all settings.</string>
    <string name="at_key_reset_warning">Warning. This will restore all settings to the default values.</string>

    <!-- Dialog Alert -->
    <string name="alert_title">Warning!</string>
    <string name="alert_subtitle">This device is tracked!</string>
    <string name="alert_info">If you have this device in your possession, please use the information below
    to return it to its rightful owner.</string>

</resources>
