<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#A6000000">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_background"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/alertTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/alert_title"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/alertSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alertTitle"
            android:layout_centerHorizontal="true"
            android:text="@string/alert_subtitle"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/warningImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/alertSubTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_warning" />

        <TextView
            android:id="@+id/alertInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/warningImage"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:text="@string/alert_info"
            android:textSize="16dp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_below="@+id/alertInfo"/>

        <TextView
            android:id="@+id/phoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alertInfo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@android:color/black"/>

    </RelativeLayout>
</RelativeLayout>